# strata-python

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
python/stratadb/: __init__.py  _stratadb.pyi
src/: lib.rs
tests/: test_strata.py
