[package]
name = "stratadb-python"
version = "0.15.0"
edition = "2021"
description = "Python bindings for StrataDB"
license = "MIT"
repository = "https://github.com/strata-ai-labs/strata-python"

[lib]
name = "_stratadb"
crate-type = ["cdylib"]

[features]
default = ["embed"]
embed = ["stratadb/embed", "dep:strata-intelligence"]
embed-cuda = ["embed", "stratadb/embed-cuda", "strata-intelligence/embed-cuda"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

# Use path dependency for local development
# stratadb = { path = "../strata-core" }
stratadb = { git = "https://github.com/strata-ai-labs/strata-core", branch = "main" }

# Intelligence crate for model download (embed feature only)
# strata-intelligence = { path = "../strata-core/crates/intelligence", features = ["embed"], optional = true }
strata-intelligence = { git = "https://github.com/strata-ai-labs/strata-core", branch = "main", features = ["embed"], optional = true }

[build-dependencies]
pyo3-build-config = "0.22"
